infrastructure/kubernetes/manifest/static-website/01 - deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-website
  labels:
    app: static-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-website
  template:
    metadata:
      labels:
        app: static-website
    spec:
      containers:
        - name: static-website
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: website-files
              mountPath: /usr/share/nginx/html
      volumes:
        - name: website-files
          configMap:
            name: website-content
