infrastructure/kubernetes/manifest/static-website/03 - service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-website
spec:
  selector:
    app: static-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
