infrastructure/kubernetes/manifest/static-website/04 - ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-website
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: k3s.junghanns.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-website
                port:
                  number: 80
  tls:
    - hosts:
        - k3s.junghanns.it
